--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -142,6 +142,7 @@ div[role="listbox"] span {
 }
 
 div[role="listbox"] button {
+    margin-right: .7rem;
     background: none;
     border: none;
     cursor: pointer;
