Feito as telas de Login e cadastro User

--- a/frontend/public/css/index.css
+++ b/frontend/public/css/index.css
@@ -23,8 +23,7 @@ body {
 }
 
 header {
-    margin-top: 25px;
-    margin-bottom: 62px;
+    margin-block: 64px;
     display: flex;
     align-items: center;
     justify-content: center;
