--- a/frontend/public/view/cadastro.html
+++ b/frontend/public/view/cadastro.html
@@ -29,16 +29,18 @@
   <main>
     <form action="" method="post" enctype="multipart/form-data">
       <div class="text">
-        <h1>Login</h1>
+        <h1>Crie sua conta</h1>
       </div>
       <div class="input-wrapper">
         
+        <input type="text" placeholder="Nome completo" id="name">
         <input type="text" placeholder="Username" id="username">
         <input type="password" placeholder="Senha" id="password">
-        <button type="button">Entrar</button>
+        <button type="button">Cadastrar</button>
       </div>
+
       <div class="text">
-        <p><a href="cadastro.html" target="_blank">Não tem uma conta? Crie</a></p>
+        <p><a href="login.html">Já tem Conta? Login</a></p>
       </div>
 
     </form>
