--- a/frontend/public/view/cadastro.html
+++ b/frontend/public/view/cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR" ng-app="meuApp">
 
 <head>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,15 +11,19 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
     rel="stylesheet">
-
   <link rel="stylesheet" href="../css/login.css">
   <link rel="shortcut icon" href="../assets/icons/Vector.svg" type="image/x-icon">
 
   <title>Lista de Compras</title>
+
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular.min.js"></script>
+  <script src="../js/app.js"></script>
+  <script src="../js/controllers/comprasController.js"></script>
+  <script src="../js/controllers/userController.js"></script>
+
 </head>
 
-<body>
+<body ng-controller="userController">
   <header>
     <a>
       <img src="../assets/icons/logo.svg" alt="logo">
@@ -31,12 +35,14 @@
       <div class="text">
         <h1>Crie sua conta</h1>
       </div>
+
       <div class="input-wrapper">
-        
-        <input type="text" placeholder="Nome completo" id="name">
-        <input type="text" placeholder="Username" id="username">
-        <input type="password" placeholder="Senha" id="password">
-        <button type="button">Cadastrar</button>
+
+        <input type="text" placeholder="Nome completo" id="name" ng-model="frmUser.name">
+        <input type="text" placeholder="Username" id="username" ng-model="frmUser.username">
+        <input type="password" placeholder="Senha" id="password"
+        ng-model="frmUser.password">
+        <button type="button" ng-click="createUser()">Cadastrar</button>
       </div>
 
       <div class="text">
