--- a/frontend/public/view/lista.html
+++ b/frontend/public/view/lista.html
@@ -19,11 +19,12 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular.min.js"></script>
   <script src="../js/app.js"></script>
-  <script src="../js/controllers/MeuController.js"></script>
+  <script src="../js/controllers/comprasController.js"></script>
+  <script src="../js/controllers/userController.js"></script>
 
 </head>
 
-<body ng-controller="MeuController">
+<body ng-controller="listaCompras">
   <header>
     <a>
       <img src="../assets/icons/logo.svg" alt="logo">
