--- a/frontend/public/view/lista.html
+++ b/frontend/public/view/lista.html
@@ -33,7 +33,7 @@
 
   <div id="app">
     <div class="container">
-      <a href="#">&lt;- Voltar</a>
+      <a href="./login.html">&lt;- Voltar</a>
     </div>
     <main>
       <form action="" method="post" enctype="multipart/form-data">
