--- a/frontend/public/view/lista.html
+++ b/frontend/public/view/lista.html
@@ -17,6 +17,7 @@
 
   <title>Lista de Compras</title>
 
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular.min.js"></script>
   <script src="../js/app.js"></script>
   <script src="../js/controllers/comprasController.js"></script>
@@ -74,8 +75,8 @@
           <img src="../assets/icons/warning-circle.svg" alt="">
           <p>{{ErroInclusao}}</p>
         </div>
-
       </div>
+
     </main>
   </div>
 
