--- a/frontend/public/view/lista.html
+++ b/frontend/public/view/lista.html
@@ -34,7 +34,7 @@
 
   <div id="app">
     <div class="container">
-      <button ng-click="logoutUser()">&lt;- Deslogar</button>
+      <button ng-click="logoutUser()">&ltri;- Deslogar</button>
     </div>
     <main>
       <form action="" method="post" enctype="multipart/form-data">
