--- a/frontend/public/view/login.html
+++ b/frontend/public/view/login.html
@@ -44,7 +44,10 @@
         <button type="button" ng-click="loginUser()">Entrar</button>
       </div>
       <div class="text">
-        <p><a href="cadastro.html">Não tem uma conta? Crie</a></p>
+        <p><a href="cadastro.html">Não tem uma conta? Crie agora!</a>
+        <br><a href="esqueci.html">Esqueceu a senha?</a>
+        </p>
+        
       </div>
 
     </form>
