--- a/frontend/public/view/esqueci.html
+++ b/frontend/public/view/esqueci.html
@@ -18,8 +18,8 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular.min.js"></script>
   <script src="../js/app.js"></script>
-  <script src="../js/controllers/comprasController.js"></script>
   <script src="../js/controllers/userController.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 </head>
 
@@ -34,39 +34,36 @@
     <form>
       <a class="btnBack" href="login.html"><img width="24" height="24" src="https://img.icons8.com/ios-glyphs/30/495566/circled-left-2.png" alt="Botão de Voltar"/></a>
       <div class="text">
-        <h1>Crie sua conta</h1>
+        <h1>Esqueceu a senha</h1>
       </div>
 
-      <div class="input-wrapper">
-
-        <input type="text" placeholder="Nome completo" id="name" ng-model="cadastroUser.name" ng-keypress="enterCadastro($event)">
-        <input type="text" placeholder="Username" id="username" ng-model="cadastroUser.username" ng-keypress="enterCadastro($event)">
-        <input type="password" placeholder="Senha" id="password" ng-model="cadastroUser.password" ng-keypress="enterCadastro($event)">
-        <input type="text" placeholder="Pergunta de segurança" id="answer" ng-model="cadastroUser.answer" ng-keypress="enterCadastro($event)">
-        <input type="text" placeholder="Resposta da pergunta" id="question" ng-model="cadastroUser.question" ng-keypress="enterCadastro($event)">
-        <button type="button" ng-click="createUser()">Cadastrar</button>
+      <div id="step1">
+        <div class="input-wrapper">
+          <input type="text" placeholder="Digite seu nome de usuário" id="username" ng-model="esqueciUser.username"
+            ng-keypress="enterEsqueci($event)">
+          <button type="button" ng-click="getSecurityQuestion()">Localizar</button>
+        </div>
       </div>
 
-      <div class="text">
-        <p><a href="login.html">Já tem Conta? Login</a></p>
+      <div id="step2" style="display: none;">
+        <div class="input-wrapper">
+          <h3>Sua pergunta de segurança é</h3>
+          <h4 id="security-question"></h4>
+          <input type="text" id="answer" ng-model="esqueciUser.answer" placeholder="Digite a resposta">
+          <input type="password" id="new-password" ng-model="esqueciUser.newPassword" placeholder="Nova senha">
+          <button type="button" ng-click="resetPassword()">Redefinir Senha</button>
+        </div>
       </div>
 
     </form>
 
-    
-    <div class="sucesso" ng-show="SucessoCadastro">
+    <div class="warning" ng-show="ErroEsqueci">
       <div class="text-container">
         <img src="../assets/icons/warning-circle.svg" alt="">
-        <p>{{SucessoCadastro}}</p>
+        <p class="error" id="error-message">{{ErroEsqueci}}</p>
       </div>
     </div>
-    <div class="warning" ng-show="ErroCadastro">
-      <div class="text-container">
-        <img src="../assets/icons/warning-circle.svg" alt="">
-        <p>{{ErroCadastro}}</p>
-      </div>
-    </div>
-    
+
   </main>
 
 </body>
