--- a/frontend/public/view/esqueci.html
+++ b/frontend/public/view/esqueci.html
@@ -49,7 +49,7 @@
         <div class="input-wrapper">
           <h3>Sua pergunta de segurança é</h3>
           <h4 id="security-question"></h4>
-          <input type="text" id="answer" ng-model="esqueciUser.answer" placeholder="Digite a resposta">
+          <input type="text" id="answer" ng-model="esqueciUser.securityAnswer" placeholder="Digite a resposta">
           <input type="password" id="new-password" ng-model="esqueciUser.newPassword" placeholder="Nova senha">
           <button type="button" ng-click="resetPassword()">Redefinir Senha</button>
         </div>
